--- a/src/pacs-pull/gex-pacs-pull.html
+++ b/src/pacs-pull/gex-pacs-pull.html
@@ -50,7 +50,7 @@
           selected="{{page}}"
           selected-item="{{selectedItem}}"
           attr-for-selected="name"
-          fallback-selection="error404"
+          fallback-selection="error"
           role="main">
           <gex-pacs-query
               id="query"
@@ -132,7 +132,7 @@
               aet: 'CHIPS',
               aec: 'ORTHANC',
               aet_listener: 'CHIPS',
-              server_ip: '192.168.1.110',
+              server_ip: '192.168.1.39',
               server_port: '4242',
             },
           },
@@ -185,6 +185,7 @@
           if (data.status === 'error') {
             this.error = data;
             this.page = 'error';
+            console.log(response);
           } else if (data.status === 'close') {
 
             // let app know we need to fetch the latest feed
