--- a/src/gex-datastore.html
+++ b/src/gex-datastore.html
@@ -1,7 +1,7 @@
 <link rel="import" href="../bower_components/polymer/polymer.html">
 
-<link rel="import" href="../../bower_components/chips-api/chips-api.html">
-<link rel="import" href="../../bower_components/chips-api/behaviors/chips-plugin-behavior.html">
+<link rel="import" href="../bower_components/chips-api/chips-api.html">
+<link rel="import" href="../bower_components/chips-api/behaviors/chips-plugin-behavior.html">
 
 <dom-module id="gex-datastore">
   <template>
@@ -28,6 +28,12 @@
           pluginBchData: {
             type: Array,
             value: [],
+            notify: true,
+            observer: '_pluginBchDataChanged',
+          },
+          pluginBchDataMap: {
+            type: Array,
+            value:  new Map(),
             //   notify: true,
           },
           pluginBchFiles: {
@@ -49,6 +55,12 @@
           pluginGeData: {
             type: Array,
             value: [],
+            notify: true,
+            observer: '_pluginGeDataChanged',
+          },
+          pluginGeDataMap: {
+            type: Array,
+            value:  new Map(),
             //   notify: true,
           },
           pluginGeFiles: {
@@ -64,114 +76,252 @@
           },
         };
       }
-    //   observers: [
-    //     '_fetchCategory(category, offline)',
-    //     '_fetchArticle(article, offline)'
-    //   ],
-        _pluginBchChanged(pluginBch) {
-          if(!pluginBch || !pluginBch.data) {
-            return;
+      _pluginBchChanged(pluginBch) {
+        if(!pluginBch || !pluginBch.data) {
+          return;
+        }
+
+        this._pluginChanged('Bch')
+      }
+
+      _pluginBchDataChanged(pluginBchData) {
+        console.log(pluginBchData);
+      }
+
+      _pluginBchFilesChanged(pluginBchFiles) {
+        this._filesChanged('Bch');
+      }
+
+      _pluginGeChanged(pluginGe) {
+        if(!pluginGe || !pluginGe.data) {
+          return;
+        }
+
+        this._pluginChanged('Ge')
+      }
+
+      _pluginGeFilesChanged(pluginGeFiles) {
+        this._filesChanged('Ge');
+      }
+
+      _pluginGeDataChanged(pluginGeData) {
+        console.log(pluginGeData);
+      }
+
+      _filesChanged(target) {
+        // clear the map
+        const map = this[`plugin${target}DataMap`];
+        map.clear();
+
+        // build data structure
+        const files = this[`plugin${target}Files`];
+        for (const file of files) {
+          // handle DCM files
+          if (file.data.fname.endsWith('.dcm')) {
+            this._handleDCM(file, map);
+          } else if (file.data.fname.endsWith('preview.jpg')) {
+            this._handleJPG(file, map);
           }
-
-          this._pluginChanged('Bch')
         }
 
-        _pluginBchFilesChanged(pluginBchFiles) {
-          console.log(pluginBchFiles);
-        }
+        // convert data map to array for polymer dom-repeat to kick in
+        this._updateDataArray(target);
 
-        _pluginGeChanged(pluginGe) {
-          if(!pluginGe || !pluginGe.data) {
-            return;
-          }
-
-          this._pluginChanged('Ge')
-        }
-
-        _pluginGeFilesChanged(pluginGeFiles) {
-          console.log(pluginGeFiles);
-        }
-
-        _pluginChanged(target) {
-          const pluginStatus = this[`plugin${target}`].data.status;
-          if (pluginStatus === 'started') {
-            // wait until finished
-            this[`plugin${target}Status`] = 'running';
-            this._waitForPluginFinished(target);
-          } else if (pluginStatus ===  'finishedSuccessfully') {
-            // fetch files
-            this[`plugin${target}Status`] = 'fetching';
-            this._fetchFiles(target);
-          } else {
-            console.log(`Un-handled plugin instance status: ${pluginStatus}`)
+        // fetch previews
+        // we need to do it after _updateDataArray
+        // so "path" is set in the series
+        const data = this[`plugin${target}Data`];
+        for(const series of data) {
+          if (series.preview !== null) {
+            this._fetchPreview(series, target);
           }
         }
+      }
 
-        _waitForPluginFinished(target) {
-          const plugin = this[`plugin${target}`];
-          const data = {};
-          data.auth = {
-            type: 'token',
-            token: sessionStorage.getItem('token'),
-          };
-
-          this.$.API.handleAs = 'json';
-          this.__waitEndPlugin(this.$.API, data, plugin, true)
-          .then((result) => {
-            this.__formatPlugin(result, this.feed);
-            this.set(`plugin${target}`, result);
-          });
-        }
-
-        _fetchFiles(target) {
-          const plugin = this[`plugin${target}`];
-          const data = {};
-          data.auth = {
-            type: 'token',
-            token: sessionStorage.getItem('token'),
-          };
-          data.params = {};
-          data.params.limit = 9999;
-          data.params.page_size = 9999;
-          this.$.API.handleAs = 'json';
-          //
-          this.__getFilesPlugin(this.$.API, data, plugin)
-          .then(this._handleFilesResponse.bind(this, target))
-          .catch(this._handleFilesError.bind(this));
-        }
-
-        _handleFilesResponse(target, response) {
-          if (response.length <= 0) {
-            this.set(`files${target}`, []);
-            return;
-          }
-
-          this[`status${target}`] = 'processing';
-
-          const plugin = this[`plugin${target}`]
-          const responseTargetID = response[0].data.plugin_inst_id;
-          const currentTargetID = plugin.data.id;
-
-          if (responseTargetID !== currentTargetID) {
-            //
-            console.log(
-              `Discard response for plugin ${responseTargetID}
-              (current plugin: ${currentTargetID})`);
-            return;
-          }
-
-          const files = [];
-          for (const file of response) {
-            this.__formatFile(file);
-            files.push(file);
-          }
-
-          this.set(`plugin${target}Files`, files);
-        }
-
-        _handleFilesError(error) {
+      _fetchPreview(series, target) {
+        //
+        const apiData = {};
+        apiData.auth = {
+          type: 'token',
+          token: sessionStorage.getItem('token'),
+        };
+        apiData.params = {};
+        // fetch ressource then update it all...
+        this.$.API.handleAs = 'blob';
+        return this.$.API.request('GET', series.preview.links.file_resource, apiData)
+        .then((response) => {
+          this.set([`plugin${target}Data`, ...series.path, 'preview.blob'], response);
+        })
+        .catch((error) => {
           console.log(error);
+        });
+      }
+
+      _handleDCM(file, map) {
+        const series = this._getSeriesFromFile(file, map);
+        series.data.push(file);
+      }
+
+      _handleJPG(file, map) {
+        const series = this._getSeriesFromFile(file, map);
+        series.preview = file;
+      }
+
+      _getSeriesFromFile(file, map) {
+        // get series directory
+        const relativeFname = file.data.relative_fname;
+        const relativeDirectory =
+          relativeFname.slice(0, relativeFname.lastIndexOf('/'));
+        
+        // find series in the map
+        let series = map.get(relativeDirectory);
+        if (series === null || series === undefined) {
+          // add new series  in the map if not present
+          series = this._seriesStructure();
+          map.set(relativeDirectory, series);
         }
+        return series;
+      }
+
+      _seriesStructure() {
+        return {
+          data: [],
+          preview: null,
+          details: {
+            series: {
+              date: 'no value provided',
+              description: 'no value provided',
+              files: 0,
+            },
+          },
+        }
+      }
+
+      _updateDataArray(target) {
+        // Map to array
+        const dataArray = [];
+        const map = this[`plugin${target}DataMap`];
+        map.forEach(this._dataMapToArray.bind(this, dataArray));
+
+        // update data
+        this.set(`plugin${target}Data`, dataArray);
+      }
+
+      _dataMapToArray(referenceArray, value, key) {
+        // set study series description
+        let seriesDate = 'no value provided';
+        let seriesDescription = 'no value provided';
+        const fullName = value.data[0].data.fname;
+        const splitName = fullName.split('/');
+        if (splitName.length >= 2) {
+          const directory = splitName[splitName.length - 2];
+          const splitSeries = directory.split('-');
+          if (splitSeries.length === 3) {
+            seriesDescription = splitSeries[0];
+            seriesDate = splitSeries[1];
+            if (seriesDate.length === 8) {
+              seriesDate = `
+                ${seriesDate.substring(0, 4)}-
+                ${seriesDate.substring(4, 6)}-
+                ${seriesDate.substring(6, 8)}`;
+            }
+          }
+        }
+        value.details.series.date = seriesDate;
+        value.details.series.description = seriesDescription;
+        // set study date
+        // set files
+        value.details.series.files = value.data.length + ' file';
+        if (value.data.length > 1) {
+          value.details.series.files += 's';
+        }
+        //
+        value.selected = false;
+        value.path = [];
+        value.path.push(referenceArray.length);
+        referenceArray.push(value);
+      }
+
+      _pluginChanged(target) {
+        const pluginStatus = this[`plugin${target}`].data.status;
+        if (pluginStatus === 'started') {
+          // wait until finished
+          this[`plugin${target}Status`] = 'running';
+          this._waitForPluginFinished(target);
+        } else if (pluginStatus ===  'finishedSuccessfully') {
+          // fetch files
+          this[`plugin${target}Status`] = 'fetching';
+          this._fetchFiles(target);
+        } else {
+          console.log(`Un-handled plugin instance status: ${pluginStatus}`)
+        }
+      }
+
+      _waitForPluginFinished(target) {
+        const plugin = this[`plugin${target}`];
+        const data = {};
+        data.auth = {
+          type: 'token',
+          token: sessionStorage.getItem('token'),
+        };
+
+        this.$.API.handleAs = 'json';
+        this.__waitEndPlugin(this.$.API, data, plugin, true)
+        .then((result) => {
+          this.__formatPlugin(result, this.feed);
+          this.set(`plugin${target}`, result);
+        });
+      }
+
+      _fetchFiles(target) {
+        const plugin = this[`plugin${target}`];
+        const data = {};
+        data.auth = {
+          type: 'token',
+          token: sessionStorage.getItem('token'),
+        };
+        data.params = {};
+        data.params.limit = 9999;
+        data.params.page_size = 9999;
+        this.$.API.handleAs = 'json';
+        //
+        this.__getFilesPlugin(this.$.API, data, plugin)
+        .then(this._handleFilesResponse.bind(this, target))
+        .catch(this._handleFilesError.bind(this));
+      }
+
+      _handleFilesResponse(target, response) {
+        if (response.length <= 0) {
+          this.set(`files${target}`, []);
+          return;
+        }
+
+        this[`status${target}`] = 'processing';
+
+        const plugin = this[`plugin${target}`]
+        const responseTargetID = response[0].data.plugin_inst_id;
+        const currentTargetID = plugin.data.id;
+
+        if (responseTargetID !== currentTargetID) {
+          //
+          console.log(
+            `Discard response for plugin ${responseTargetID}
+            (current plugin: ${currentTargetID})`);
+          return;
+        }
+
+        const files = [];
+        for (const file of response) {
+          this.__formatFile(file);
+          files.push(file);
+        }
+
+        this.set(`plugin${target}Files`, files);
+      }
+
+      _handleFilesError(error) {
+        console.log(error);
+      }
     }
 
     window.customElements.define(GEXDataStore.is, GEXDataStore);
