Fix series reloading.

--- a/src/elements/ami-viewer-2d.html
+++ b/src/elements/ami-viewer-2d.html
@@ -255,8 +255,9 @@
       }
 
       _stackSceneChanged(stackScene) {
-        if (stackScene === undefined
-          || !stackScene.children) {
+        if (stackScene === undefined ||
+            stackScene === null ||
+            !stackScene.children) {
           return;
         }
 
